# cuda_test

./: CMakeLists.txt  README.md
src/: matrix_math.cu  test_cuda.cu
